--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-bootstrap": "angular-ui-bootstrap-bower#~0.14.3",
     "angular-mocks": "~1.4.7",
     "bootstrap": "3.3.5",
-    "datatables": "DataTables#1.10.10"
+    "datatables": "DataTables#1.10.10",
+    "font-awesome": "4.4.0"
   }
 }
